# Billhound

./: HOUND_TOKEN_BUSINESS_MODEL.md  PLAN.md  Subscription_Management_Agent_PRD.docx
billhound/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
billhound/src/: __main__.py  main.py
billhound/src/acp/: __init__.py  actions.py  client.py  listener.py
billhound/src/automation/: __init__.py  base_strategy.py  models.py  orchestrator.py  registry.py
billhound/src/config/: constants.py  logging_config.py  settings.py
billhound/src/db/: base.py  engine.py
billhound/src/email_ingestion/: parser.py  types.py
billhound/src/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py  prompts.py
billhound/src/migrations/: env.py
billhound/src/pdf/: processor.py
billhound/src/services/: alert_service.py  backfill.py  email_scanner.py  merchant_db.py  savings_report.py  scheduler.py  subscription_service.py
billhound/src/telegram/: bot.py  formatting.py
billhound/src/trust/: account_deletion.py  audit.py  consent.py  data_export.py  encryption.py  oauth_scope_display.py  privacy_manager.py
billhound/tests/: conftest.py  factories.py
billhound/tests/unit/: test_acp.py  test_alert_service.py  test_auth_strategy.py  test_backfill.py  test_cancellation_strategy.py  test_cascading_deletes.py  test_credential_handlers.py  test_email_parser.py  test_encryption.py  test_formatting.py  test_llm_prompts.py  test_llm_providers.py  test_merchant_db.py  test_oauth_clients.py  (+8 more)
(+64 files in other folders)
