[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billhound"
version = "0.1.0"
description = "Sniffing out subscriptions you forgot about."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "cryptography>=44.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
    "aiohttp>=3.11.0",
    "pdfplumber>=0.11.0",
    "playwright>=1.49.0",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "virtuals-acp>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
